--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
   "dependencies": {
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/graphql": "^7.10.6",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^7.1.5",
+    "apollo-server-express": "^2.24.1",
+    "graphql": "^15.5.0",
+    "graphql-tools": "^7.0.5",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
