--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "@nestjs/typeorm": "^7.1.5",
     "apollo-server-express": "^2.24.1",
     "class-validator": "^0.13.1",
+    "g": "^2.0.1",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.5",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3",
-    "typeorm": "^0.2.32"
+    "rxjs": "^6.6.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
