--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "apollo-server-express": "^2.24.1",
     "class-validator": "^0.13.1",
     "graphql": "^15.5.0",
+    "graphql-query-complexity": "^0.8.1",
     "graphql-tools": "^7.0.5",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
