--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "console": "ts-node -r tsconfig-paths/register src/console.ts"
+    "console": "ts-node -r tsconfig-paths/register src/console.ts",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/ormconfig.ts",
+    "migration": "yarn typeorm migration:run",
+    "migration:create": "yarn typeorm migration:create -n",
+    "migration:revert": "yarn typeorm migration:revert"
   },
   "dependencies": {
     "@apollo/gateway": "^0.26.3",
