--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "graphql-with-nestjs",
-  "version": "0.0.1",
+  "name": "webtoon-crawler",
+  "version": "1.0.0",
   "description": "",
   "author": "",
   "private": true,
